RACE2/AKS_Istio_Deployments/RACE2.WebApi/RACE2WebApiService.yaml
apiVersion: v1
kind: Service
metadata:
  name: race2webapi-service
  namespace: race2webapi
spec:
  selector:
    app: race2webapi-pod
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
