RACE2/AKS_Istio_Deployments/RACE2.WebApi/RACE2WebApiGatewayTLS.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: race2webapi-gateway
  namespace: race2webapi
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
      - "race2api.gov.uk"
    port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
      - "race2api.gov.uk"
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: webapi-credential
