RACE2/AKS_Istio_Deployments/RACE2.WebApi/RACE2WebApiVirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: race2webapi-virtualservice
  namespace: race2webapi
spec:
  hosts:
  - "race2app.gov.uk"
  gateways:
  - race2webapi-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: race2webapi-service
